--- a/ShineWay/Properties/Resources.resx
+++ b/ShineWay/Properties/Resources.resx
@@ -226,4 +226,10 @@
   <data name="bookmark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bookmark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bookingdatagridviewpanel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bookingdatagridviewpanel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="datagridviewpanel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\datagridviewpanel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
