--- a/ShineWay/Properties/Resources.resx
+++ b/ShineWay/Properties/Resources.resx
@@ -229,7 +229,7 @@
 
   <data name="EmptyResults" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\EmptyResults.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-
+  </data>
   <data name="bookingdatagridviewpanel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bookingdatagridviewpanel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
