validation for customers

--- a/ShineWay/UI/customer.resx
+++ b/ShineWay/UI/customer.resx
@@ -172,6 +172,15 @@
         Q3QtpEWj4y3N+lpIinLR3PGWZr4WktmT4zjZpPQHBW16ieuWssIAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="pictureBox19.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAMRJREFUWEft2KEOwjAYBOBKkJNYkMghkTwDFskkEiSWp+ZOLFmWP2vSXqvuki9Z
+        tqy9pFV/chynf05wh6fIAy4gzRV+jXBtSfbwgWgThS/soDo88mgDpQNUp0fRI1THRRdcVM1F1VxUzUXV
+        XFTNRdVcVM1F1VxUzUW3cAoyrd7ldCvKIcINBpjDZ46A+C36Z6l50RdwJLM16WDhEd4QrUHNivJ4SxY/
+        Q3QtpEWj4y3N+lpIinLR3PGWZr4WktmT4zjZpPQHBW16ieuWssIAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="pb_btnDelete.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIwAAAAqCAYAAABhhbPNAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
